added rebalancing