@@ -21,16 +21,15 @@ public class HeartBeatService {
 
     final static Logger LOGGER = LoggerFactory.getLogger(HeartBeatService.class);
 
-    private final HeartBeatConfig heartBeatConfig;
+    private final HeartBeatConfig config;
     private boolean sucessfulSwitch = true;
 
-
-    public HeartBeatService(HeartBeatConfig heartBeatConfig) {
-        this.heartBeatConfig = heartBeatConfig;
+    public HeartBeatService(HeartBeatConfig config) {
+        this.config = config;
     }
 
     private AdminClient getAdminClient() {
-        final Properties kafkaProperties = heartBeatConfig.getKafkaProperties();
+        final Properties kafkaProperties = config.getKafkaProperties();
         if (kafkaProperties == null) {
             LOGGER.error("kafkaProperties are null");
         }
@@ -38,128 +37,77 @@ public class HeartBeatService {
     }
 
     public void switchDown() {
-        LOGGER.info("swicthIsrDown");
-        if (heartBeatConfig.isFastMinIsr()) {
-            switchDown(1);
-        } else {
-            switchDown(heartBeatConfig.getReducedIsr());
-        }
-        rebalanceDown();
+        sucessfulSwitch = true;
+        LOGGER.info("switchIsrDown");
+        LOGGER.info("switching minISR to 1");
+        switchIsr(1);
+        LOGGER.info("rebalancing down to min {} replicas", config.getReducedIsr());
+        rebalance(config.getReducedIsr(), false, config.getRebalanceDownDelay(), config.getReducedIsr());
+        LOGGER.info("switchIsrDown finished, success={}", sucessfulSwitch);
     }
 
     public void switchBack() {
+        sucessfulSwitch = true;
         LOGGER.info("switchIsrBack");
-        rebalanceUp();
-        switchIsr(heartBeatConfig.getStandardIsr());
+        LOGGER.info("rebalancing up to min {} replicas", config.getReplicationFactor());
+        rebalance(config.getReplicationFactor(), true, config.getRebalanceUpDelay(), config.getStandardIsr());
+        LOGGER.info("switchIsrBack finished, success={}", sucessfulSwitch);
     }
 
-    public void rebalanceDown() {
-        sucessfulSwitch = true;
-        for (String topic : heartBeatConfig.getTopics()) {
-            LOGGER.info("rebalancing down, topic {} down to available replicas", topic);
-            try {
-                for (Integer partition : getPartitions(topic)) {
-                    final int isrCount = getIsr(topic, partition).size();
-                    if (isrCount >= heartBeatConfig.getReducedIsr()) {
-                        LOGGER.info("SKIPPING rebalancing down, topic {}, partition {} already has {} ISRs", topic, partition, isrCount);
-                    } else {
-                        final Integer leader = getLeader(topic, partition);
-                        if (leader != null) {
-                            try {
-                                final List<Integer> replicas = getRebalanceReplicas(leader, partition, false);
-                                partitionReassignment(topic, partition, replicas);
-                                Thread.sleep(heartBeatConfig.getRebalanceDownDelay() * 1000);
-                            } catch (Exception e) {
-                                sucessfulSwitch = false;
-                                LOGGER.error("ERROR rebalancing down topic {}, partition {}", topic, partition, e);
-                            }
-                        }
-                    }
-                }
-                if (sucessfulSwitch && heartBeatConfig.isFastMinIsr()) {
-                    switchIsr(heartBeatConfig.getReducedIsr());
-                }
-            } catch (Exception e) {
-                sucessfulSwitch = false;
-                LOGGER.error("ERROR rebalancing down topic {}", topic, e);
+    public void rebalance(int requiredReplicas, boolean extend, int delay, int newMinIsr) {
+        for (String topic : config.getTopics()) {
+            if (rebalance(topic, requiredReplicas, extend, delay)) {
+                switchIsr(topic, newMinIsr);
             }
         }
     }
 
-    public void rebalanceUp() {
-        sucessfulSwitch = true;
-        for (String topic : heartBeatConfig.getTopics()) {
-            LOGGER.info("rebalancing up, topic {} to available replicas", topic);
-            try {
-                for (Integer partition : getPartitions(topic)) {
-                    final Integer leader = getLeader(topic, partition);
-                    if (leader != null) {
-                        final int isrCount = getIsr(topic, partition).size();
-                        if (isrCount >= heartBeatConfig.getReplicationFactor()) {
-                            LOGGER.info("SKIPPING rebalancing up, topic {}, partition {} already has {} ISRs", topic, partition, isrCount);
-                        } else {
-                            try {
-                                final List<Integer> replicas = getRebalanceReplicas(leader, partition, true);
-                                partitionReassignment(topic, partition, replicas);
-                                Thread.sleep(heartBeatConfig.getRebalanceUpDelay() * 1000);
-                            } catch (Exception e) {
-                                sucessfulSwitch = false;
-                                LOGGER.error("ERROR rebalancing up topic {}, partition {}", topic, partition, e);
-                            }
-                        }
-                    }
+    private boolean rebalance(String topic, int requiredReplicas, boolean extend, int delay) {
+        final TopicData topicData = getTopicData(topic);
+        boolean successfulRebalance = true;
+        for (PartitionData partition : topicData.getPartitions()) {
+            final int isrCount = partition.getIsrs().size();
+            if (isrCount >= requiredReplicas) {
+                LOGGER.info("SKIPPING rebalancing topic {}, partition {} already has {} ISRs", topic, partition.getId(), isrCount);
+            } else if (partition.getLeader() == null) {
+                LOGGER.info("SKIPPING rebalancing topic {}, partition {}, no leader set", topic, partition.getId(), isrCount);
+            } else {
+                try {
+                    final List<Integer> replicas = getRebalanceReplicas(partition.getLeader(), partition.getId(), extend);
+                    partitionReassignment(topic, partition.getId(), replicas);
+                    Thread.sleep(delay * 1000);
+                } catch (Exception e) {
+                    sucessfulSwitch = false;
+                    successfulRebalance = false;
+                    LOGGER.error("ERROR rebalancing topic {}, partition {}", topic, partition.getId(), e);
                 }
-            } catch (Exception e) {
-                sucessfulSwitch = false;
-                LOGGER.error("ERROR rebalancing up topic {}", topic, e);
             }
         }
-    }
-
-    private void switchDown(int newIsr) {
-        sucessfulSwitch = true;
-        for (String topic : heartBeatConfig.getTopics()) {
-            LOGGER.info("switchIsr, topic {} to {}", topic, newIsr);
-            try {
-                for (Integer partition : getPartitions(topic)) {
-                    final int isrCount = getIsr(topic, partition).size();
-                    if (newIsr < isrCount) {
-                        LOGGER.info("switching minISR down to {}, for topic {}", newIsr, topic);
-                        switchIsr(topic, newIsr);
-                        break;
-                    }
-                }
-            } catch (Exception e) {
-                sucessfulSwitch = false;
-                LOGGER.error("ERROR in switchIsr to {}, for topic {}", newIsr, topic, e);
-            }
-        }
+        return successfulRebalance;
     }
 
     private void switchIsr(int newIsr) {
-        sucessfulSwitch = true;
-        for (String topic : heartBeatConfig.getTopics()) {
-            LOGGER.info("switchIsr, topic {} to {}", topic, newIsr);
-            try {
-                switchIsr(topic, newIsr);
-            } catch (Exception e) {
-                sucessfulSwitch = false;
-                LOGGER.error("ERROR in switchIsr to {}, for topic {}", newIsr, topic, e);
-            }
+        for (String topic : config.getTopics()) {
+            switchIsr(topic, newIsr);
         }
     }
 
-    private void switchIsr(String topic, int newIsr) throws Exception {
-        if (getMinIsr(topic) != newIsr) {
-            setMinIsr(topic, newIsr);
-        } else {
-            LOGGER.info("SKIPPING topic {} already has minIsr of {}", topic, newIsr);
+    private void switchIsr(String topic, int newIsr) {
+        LOGGER.info("switchIsr, topic {} to {}", topic, newIsr);
+        try {
+            if (getMinIsr(topic) != newIsr) {
+                setMinIsr(topic, newIsr);
+            } else {
+                LOGGER.info("SKIPPING topic {} already has minIsr of {}", topic, newIsr);
+            }
+        } catch (Exception e) {
+            sucessfulSwitch = false;
+            LOGGER.error("ERROR in switchIsr to {}, for topic {}", newIsr, topic, e);
         }
     }
 
     public void setMinIsr(String topic, int minIsr) throws Exception {
-        final AdminClient adminClient = getAdminClient();
-        try {
+        try (AdminClient adminClient = getAdminClient()) {
             final ConfigResource configResource = new ConfigResource(ConfigResource.Type.TOPIC, topic);
             final ConfigEntry configEntry = new ConfigEntry(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, minIsr + "");
             final AlterConfigOp alterConfigOp = new AlterConfigOp(configEntry, AlterConfigOp.OpType.SET);
@@ -171,14 +119,11 @@ public class HeartBeatService {
             }
             all.get();
             LOGGER.info("minIsr set to {}, for topic {}", minIsr, topic);
-        } finally {
-            adminClient.close();
         }
     }
 
     public int getMinIsr(String topic) throws Exception {
-        final AdminClient adminClient = getAdminClient();
-        try {
+        try (AdminClient adminClient = getAdminClient()) {
             final Set<ConfigResource> resources = Collections.singleton(new ConfigResource(ConfigResource.Type.TOPIC, topic));
             final KafkaFuture<Map<ConfigResource, Config>> all = adminClient.describeConfigs(resources).all();
             while (!all.isDone()) {
@@ -188,12 +133,10 @@ public class HeartBeatService {
             final Object[] keys = configResourceConfigMap.keySet().toArray();
             for (ConfigEntry configEntry : configResourceConfigMap.get(keys[0]).entries()) {
                 if (configEntry.name().equals(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG)) {
-                    LOGGER.debug("getMinIsr returned {}, for topic {}", configEntry.value(), topic);
+                    //LOGGER.debug("getMinIsr returned {}, for topic {}", configEntry.value(), topic);
                     return Integer.parseInt(configEntry.value());
                 }
             }
-        } finally {
-            adminClient.close();
         }
         return 0;
     }
@@ -216,72 +159,30 @@ public class HeartBeatService {
 
     public List<Integer> getAvailableBrokers() throws Exception {
         final AdminClient adminClient = getAdminClient();
-        final List<Integer> brokers = getAdminClient().describeCluster().nodes().get().stream().map(n -> n.id()).sorted().collect(Collectors.toList());
+        final List<Integer> brokers = getAdminClient().describeCluster().nodes().get().stream().map(Node::id).sorted().collect(Collectors.toList());
         adminClient.close();
         return brokers;
     }
 
-    private void partitionReassignment(String topicName, Integer partition, List<Integer> replicas) throws
-            Exception {
-        if (CollectionUtils.containsAll(getReplicas(topicName, partition), replicas)) {
-            LOGGER.info("replicas already set to {} for topic {}, partition {}", replicas, topicName, partition);
-            return;
-        }
-        final AdminClient adminClient = getAdminClient();
-        try {
+    private void partitionReassignment(String topicName, Integer partition, List<Integer> replicas) throws Exception {
+        try (AdminClient adminClient = getAdminClient()) {
             Map<TopicPartition, Optional<NewPartitionReassignment>> topicPartitionOptionalHashMap = new HashMap<>();
             topicPartitionOptionalHashMap.put(new TopicPartition(topicName, partition), Optional.of(new NewPartitionReassignment(replicas)));
             adminClient.alterPartitionReassignments(topicPartitionOptionalHashMap).all().get();
             LOGGER.info("replicas set to {} for topic {}, partition {}", replicas, topicName, partition);
-        } finally {
-            adminClient.close();
-        }
-
-    }
-
-    private List<Integer> getPartitions(String topicName) throws Exception {
-        final AdminClient adminClient = getAdminClient();
-        try {
-            final TopicDescription topicDescription = adminClient.describeTopics(Arrays.asList(topicName)).topicNameValues().get(topicName).get();
-            return topicDescription.partitions().stream().map(p -> p.partition()).sorted().collect(Collectors.toList());
-        } finally {
-            adminClient.close();
         }
     }
 
-    private List<Integer> getReplicas(String topicName, Integer partition) throws Exception {
-        final AdminClient adminClient = getAdminClient();
-        try {
-            final TopicDescription topicDescription = adminClient.describeTopics(Arrays.asList(topicName)).topicNameValues().get(topicName).get();
-            return topicDescription.partitions().get(partition).replicas().stream().map(r -> r.id()).sorted().collect(Collectors.toList());
-        } finally {
-            adminClient.close();
+    public TopicData getTopicData(String topicName) {
+        TopicData topicData = new TopicData();
+        topicData.setName(topicName);
+        try (AdminClient adminClient = getAdminClient()) {
+            final TopicDescription topicDescription = adminClient.describeTopics(List.of(topicName)).topicNameValues().get(topicName).get();
+            topicData.setPartitions(topicDescription.partitions().stream().map(PartitionData::new).collect(Collectors.toList()));
+        } catch (Exception e) {
+            LOGGER.error("ERROR getTopicData, topic {}", topicName, e);
         }
-    }
-
-    private List<Integer> getIsr(String topicName, Integer partition) throws Exception {
-        final AdminClient adminClient = getAdminClient();
-        try {
-            final TopicDescription topicDescription = adminClient.describeTopics(Arrays.asList(topicName)).topicNameValues().get(topicName).get();
-            return topicDescription.partitions().get(partition).isr().stream().map(r -> r.id()).sorted().collect(Collectors.toList());
-        } finally {
-            adminClient.close();
-        }
-    }
-
-    private Integer getLeader(String topicName, Integer partition) throws Exception {
-        final AdminClient adminClient = getAdminClient();
-        try {
-            final TopicDescription topicDescription = adminClient.describeTopics(Arrays.asList(topicName)).topicNameValues().get(topicName).get();
-            final Node leader = topicDescription.partitions().get(partition).leader();
-            if (leader == null) {
-                LOGGER.error("no leader found for {}, partition {}", topicName, partition);
-                return null;
-            }
-            return leader.id();
-        } finally {
-            adminClient.close();
-        }
+        return topicData;
     }
 
     private List<Integer> orderLeaderFirst(List<Integer> replicas, Integer leader) {
